Added Path and Node classes
-Added Path class
-Added Node class
-Replaced 'LinkedList<Airport[]>' with 'Path'
-Replaced 'Airport[]' with 'Node'
-Added 'alt' attribute to images inside README.md
-Removed 'isPathNotContainingNode' method from PathFinder
-Removed 'isAllPossiblePathsNotContainingPath' method from PathFinder
-Renamed 'compareByDistancePath' Comparator to 'comparePathByDistance'
-Removed 'trackDisplay' method from Airplane
-Changed 'calculateMinRequiredFuel' method from PathFinderTest
-Added 'polandMinFuel' variable to PathFinderTest