@@ -19,33 +19,27 @@ public class DFS extends PathFinder {
      * Starts Depth-first search algorithm.
      * @return path to finalAirport.
      */
-    public LinkedList<Airport[]> startDFS(){
-        LinkedList<Airport[]> path = new LinkedList<>();
+    public Path startDFS(){
+        Path path = new Path();
         //If it is possible to travel directly to destination - return appropriate path//
         if(initialAirport.getNearAirports(fuel).contains(finalAirport)){
-            path.add(new Airport[]{initialAirport, finalAirport});
+            path.add(new Node(initialAirport, finalAirport));
             return path;
-        }
-        LinkedList<LinkedList<Airport[]>> allPossiblePaths = new LinkedList<>();
-        ArrayList<Airport[]> thisAirportNodes = new ArrayList<>(initialAirport.getNodes(fuel));
-        for(Airport[] node : thisAirportNodes){
-            if(node[1].equals(finalAirport)){
-                path.add(node);
-                allPossiblePaths.add(path);
-                break;
-            } else {
+        } else {
+            LinkedList<Path> allPossiblePaths = new LinkedList<>();
+            LinkedList<Node> initialAirportNodes = new LinkedList<>(initialAirport.getNodes(fuel));
+            for(Node node : initialAirportNodes){
                 path.add(node);
                 allPossiblePaths = recursion(path, allPossiblePaths);
+                path.clear();
             }
-            path.clear();
-        }
-        if(allPossiblePaths.isEmpty()){
-            return null;
-        }
-        else {
-            allPossiblePaths.sort(compareByDistancePath);
-            path = allPossiblePaths.getFirst();
-            return path;
+            if(allPossiblePaths.isEmpty()){
+                return null;
+            } else {
+                allPossiblePaths.sort(comparePathByDistance);
+                path = allPossiblePaths.getFirst();
+                return path;
+            }
         }
     }
 
@@ -55,44 +49,34 @@ public class DFS extends PathFinder {
      * @param allPossiblePaths all found path leading to finalAirport.
      * @return updated allPossiblePaths.
      */
-    private LinkedList<LinkedList<Airport[]>> recursion(LinkedList<Airport[]> path,
-                                                        LinkedList<LinkedList<Airport[]>> allPossiblePaths){
-        LinkedList<Airport[]> nodesToSearch = new LinkedList<>();//backup
-        if(path.size()>0){
-            path.get(path.size()-1)[1].getNodes(fuel);
-            ArrayList<Airport[]> node1GetNodes = new ArrayList<>(path.get(path.size()-1)[1].getNodes(fuel));
-            for(Airport[] nodeNeighbor : node1GetNodes){
-                if(!(nodeNeighbor[0] == initialAirport) && !(nodeNeighbor[1] == initialAirport) &&
-                        !(nodeNeighbor[1] == path.get(path.size()-1)[0]) && isPathNotContainingNode(nodeNeighbor,path)){
-                    if(nodeNeighbor[1].equals(finalAirport)){
+    private LinkedList<Path> recursion(Path path, LinkedList<Path> allPossiblePaths){
+        if(!path.isEmpty()){
+            LinkedList<Node> nodesToSearch = new LinkedList<>();//backup
+            ArrayList<Node> possibleNextNodes = new ArrayList<>(path.getLast().getFinalAirport().getNodes(fuel));
+            for(Node nodeNeighbor : possibleNextNodes){
+                if(!path.contains(nodeNeighbor) && !path.contains(nodeNeighbor.getFinalAirport())){
+                    if(nodeNeighbor.getFinalAirport().equals(finalAirport)){
                         path.add(nodeNeighbor);
-                        if(isAllPossiblePathsNotContainingPath(path, allPossiblePaths)){
-                            allPossiblePaths.add(new LinkedList<>(path));
+                        if(!allPossiblePaths.contains(path)){
+                            allPossiblePaths.add(new Path(path));
                         }
                         path.remove(nodeNeighbor);
-                        break;
-                    }
-                    else {
+                    } else {
                         nodesToSearch.add(nodeNeighbor);
                     }
                 }
             }
-            for(Airport[] nodeNeighbor : nodesToSearch){
-                if(path.size()>0){
-                    if(!(nodeNeighbor[0] == initialAirport) && !(nodeNeighbor[1] == initialAirport) &&
-                            !(nodeNeighbor[1] == path.get(path.size()-1)[0]) &&
-                            isPathNotContainingNode(nodeNeighbor, path)){
-                        if(nodeNeighbor[1].equals(this.finalAirport)){
+            for(Node nodeNeighbor : nodesToSearch){
+                if(!path.isEmpty()){
+                    if(!path.contains(nodeNeighbor) && !path.contains(nodeNeighbor.getFinalAirport())){
+                        if(nodeNeighbor.getFinalAirport().equals(finalAirport)){
                             path.add(nodeNeighbor);
-                            if(isAllPossiblePathsNotContainingPath(path, allPossiblePaths)){
-                                allPossiblePaths.add(new LinkedList<>(path));
+                            if(!allPossiblePaths.contains(path)){
+                                allPossiblePaths.add(new Path(path));
                             }
                             path.remove(nodeNeighbor);
                             break;
-                        }
-                        else if(!nodeNeighbor[1].equals(initialAirport) &&
-                                !nodeNeighbor[1].equals(path.get(path.size()-1)[1]) &&
-                                isPathNotContainingNode(nodeNeighbor, path)){
+                        } else {
                             path.add(nodeNeighbor);
                             allPossiblePaths = recursion(path, allPossiblePaths);
                             path.remove(nodeNeighbor);
